change hard coded string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">TrackApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="wellcome">Wellcome your chat app where the world became a small village</string>
+    <string name="your_app">Life became eassier with your app chatApp</string>
+    <string name="skip">Skip</string>
+    <string name="register_tuto">If you do not have account click the button bellow to register</string>
+    <string name="register_button">Register</string>
+    <string name="messaging">ChatApp is yours, give you the oportunity to communicate all over the world</string>
+    <string name="messaging_fun">In your chat app you can have fun with your friend and all other users if you want</string>
+    <string name="login_tuto">If you have account click the button bellow now</string>
 </resources>
