fixing some bugs

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello_blank_fragment">fragement vide</string>
-    <string name="wellcome">Bonjour voutre application chatApp rend le monde une petite village</string>
+    <string name="wellcome">Bonjour, votre application ChatApp rend le monde un petit village</string>
     <string name="your_app">la vie devient simple avec chatApp</string>
     <string name="skip">Ingore</string>
-    <string name="register_tuto">Si vous n\'avez pas de compte cliquer sur le botton au dessus pour s\'enregistrer</string>
+    <string name="register_tuto">Si vous n\'avez pas de compte cliquer sur le bouton au-dessus pour s\'enregistrer</string>
     <string name="register_button">S\'enregistrer</string>
-    <string name="messaging">Chatapp est votre application vous libre de l\'utilise</string>
-    <string name="messaging_fun">"Vous etes capable de communiquer avec tout le monde "</string>
-    <string name="login_tuto">Si vous n\'avez pas de compte clique sur le botton au dessus</string>
+    <string name="messaging">ChatApp est votre application vous libre de l\'utiliser</string>
+    <string name="messaging_fun">Vous êtes capable de communiquer avec tout le monde </string>
+    <string name="login_tuto">Si vous n\'avez pas de compte cliqué sur le bouton au-dessus</string>
     <string name="log_in">entrer</string>
-    <string name="forgot_your_password">Mots de passe oubliee</string>
-    <string name="create_account">Creer compte</string>
+    <string name="forgot_your_password">Mots de passe oubliée</string>
+    <string name="create_account">Entre dans votre compte</string>
     <string name="register">S\'enregistre</string>
-    <string name="reset">recuperer</string>
-    <string name="reset_your_password">En cliquant vous recevie un lien de reinisialisation de mot de passe</string>
+    <string name="reset">Récupérer</string>
+    <string name="reset_your_password">En cliquant vous receviez un lien de réinitialisation de mot de passe dans votre boîte mail.</string>
     <string name="login">Entrer</string>
+    <string name="Login_java">S\'enregistre</string>
+    <string name="All_fields_are_required">Tous les champs sont indispensables</string>
+    <string name="Authentification_failed">Enregistrement echouee</string>
+    <string name="Reset_your_password">Récupérer ton mots de passe</string>
+    <string name="Email_required">Email indispensable</string>
+    <string name="Pls_check_your_email">Voir ton mail</string>
+    <string name="password_checker">le longeur de mot de passe doit au moins contenir 6 caractere</string>
+    <string name="email_password_incorecte">vous ne pouvez entrer avec ce mail ou mot de passe</string>
+    <string name="Messages">Messages</string>
+    <string name="empty_message">vous ne pouvez pas envoyer une message vide</string>
+    <string name="Profile">Profile</string>
+    <string name="Friends">Amis</string>
+    <string name="users">Utilisateurs</string>
 </resources>
