--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -29,4 +29,5 @@
     <string name="Profile">Profile</string>
     <string name="Friends">Amis</string>
     <string name="users">Utilisateurs</string>
+    <string name="change_password">change password</string>
 </resources>
