--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="Profile">Profile</string>
     <string name="Friends">Friends</string>
     <string name="users">Users</string>
+    <string name="change_password">change password</string>
 </resources>
