--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,18 @@
     <string name="change_password">change password</string>
     <string name="no_connexion">You are not connected to any souces of internet, activate you connexion or have fun by playing a game</string>
     <string name="play_tic_tac_toe">Play X-O</string>
+    <string name="play_math_game">play math game</string>
+    <string name="interval">MAX RANGE :</string>
+    <string name="choosed">Choosed :</string>
+    <string name="addition">Addition (+)</string>
+    <string name="extraction">Extraction (-)</string>
+    <string name="multiplication_x">Multiplication (x)</string>
+    <string name="play2">Play!</string>
+    <string name="time_limit">Time Limit</string>
+    <string name="play_again">Play Again</string>
+    <string name="correct">Correct!</string>
+    <string name="wrong">wrong</string>
+    <string name="inprogress">Upload in progress</string>
+    <string name="notsetected">No image selected</string>
+    <string name="failed">Failed!</string>
 </resources>
